# filler

./: .gitignore  CMakeLists.txt  Makefile  input  input_medium  input_small  output
inc/: filler.h
libftprintf/: .gitignore  Makefile  bin_unsigned_long_long.c  c_lower_case.c  c_upper_case.c  dec_long_long.c  dec_unsigned_long_long.c  ft_printf.c  get_replacing_specification.c  get_specification.c  hex_unsigned_long_long.c  oct_unsigned_long_long.c  p_lower_case.c  parse_print.c  print_data.c  s_lower_case.c  s_upper_case.c  with_len.c
libftprintf/inc/: ft_printf.h
libftprintf/libft/: Makefile  author  ft_abs.c  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_itoa_base.c  ft_labs.c  ft_llabs.c  ft_lltoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_ltoa_base.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_putunichar.c  (+32 more)
libftprintf/libft/inc/: get_next_line.h  libft.h
srcs/: ft_sqrt.c  get_evaluation.c  get_len.c  insert_piece.c  lists.c  main.c  piece.c  plateau.c  plateau_piece.c  putsqr.c  read.c  set_evaluation.c  set_i_j.c  wave.c
visualization/: Makefile  color.h  draw.c  draw_grid.c  draw_o.c  draw_x.c  graphics.c  key_events.h  key_map.h  main.c  plateau_piece.c  putsqr.c  visualization.h
